<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/relativeContentHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.desafioandroidconcrete.home.activity.HomeActivity">

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/progressBarHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imgGit"
        android:contentDescription="@string/imageGit"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_github"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtFailureText"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spaceContentAreas"
        android:text="@string/failureList"
        android:contentDescription="@string/failureList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgGit"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvListRepository"
        android:contentDescription="@string/listRepo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
